[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/Wolf.gd" type="Script" id=1]
[ext_resource path="res://sprites/Wolf Sprite Idle/Wolf_Sprite_Idle.png" type="Texture" id=2]
[ext_resource path="res://sprites/Wolf Walk/Wolf_Sprite_Walk2.png" type="Texture" id=3]
[ext_resource path="res://sprites/Wolf Walk/Wolf_Sprite_Walk1.png" type="Texture" id=4]
[ext_resource path="res://scripts/ViewCone.gd" type="Script" id=5]
[ext_resource path="res://sound/effects/Howl2.wav" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "eating",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 9.49702

[sub_resource type="CircleShape2D" id=3]
radius = 65.6216

[sub_resource type="CircleShape2D" id=4]
radius = 67.1768

[sub_resource type="CircleShape2D" id=5]
radius = 193.035

[node name="Wolf" type="KinematicBody2D"]
position = Vector2( 643.269, 715.807 )
collision_layer = 4
collision_mask = 64
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "eating"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="ObstacleProximityDetector" type="Area2D" parent="."]
visible = false
collision_layer = 128
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObstacleProximityDetector"]
shape = SubResource( 3 )

[node name="SheepProximityDetector" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SheepProximityDetector"]
shape = SubResource( 4 )

[node name="DogProximityDetector" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="DogProximityDetector"]
shape = SubResource( 5 )

[node name="ViewCone" type="Node2D" parent="."]
z_index = -1
script = ExtResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "FX"
[connection signal="body_entered" from="ObstacleProximityDetector" to="." method="_on_ObstacleProximityDetector_body_entered"]
[connection signal="body_exited" from="ObstacleProximityDetector" to="." method="_on_ObstacleProximityDetector_body_exited"]
[connection signal="body_entered" from="SheepProximityDetector" to="." method="_on_SheepProximityDetector_body_entered"]
[connection signal="body_exited" from="SheepProximityDetector" to="." method="_on_SheepProximityDetector_body_exited"]
[connection signal="body_entered" from="DogProximityDetector" to="." method="_on_DogProximityDetector_body_entered"]
[connection signal="body_exited" from="DogProximityDetector" to="." method="_on_DogProximityDetector_body_exited"]
